<resources>
    <string name="app_name">Stickman Jump</string>
    <string name="play">Play</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_inn">LOGIN</string>
    <string name="retype_password">Retype Password</string>
    <string name="sign_upp">SIGN UP</string>
    <string name="loginToolbar">Login</string>
    <string name="registerToolbar">Register</string>
    <string name="Aboutcontact">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="home">Home</string>
    <string name="how_to_play">How to Play</string>
    <string name="press_the_screen_to_jump">Press the screen to jump</string>
    <string name="you_will_see_things_coming">You will see things coming</string>
    <string name="take">Take</string>
    <string name="don_t_take">Don\'t take !</string>
    <string name="back">Back</string>
    <string name="stickman_jump">Stickman Jump</string>
    <string name="about">About</string>
    <string name="aboutour">This is a 2D game on android called Stickman Jump.This is an attractive and simple game, all you have to do is touch the screen to jump and don\'t touch the virus.because it loses the game. So this app is a project required by the faculty: University of Prishtina - Faculty of Electrical and Computer Engineering especially in the subject Mobile Device Programming in order to successfully pass the course.So this app is created by 3 students: Xhemajl Kabashi Taulant Isaku and Valton Sherifi.Follow our team in social media.</string>
</resources>