<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:tabIndicatorColor="#FFFFFF">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/firstItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginToolbar" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/secondItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerToolbar" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/thirditem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Aboutcontact" />
    </com.google.android.material.tabs.TabLayout>

</androidx.constraintlayout.widget.ConstraintLayout>