<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".howtoplay"
    android:background="@color/cardview_dark_background"
    >
    <ImageView
        android:id="@+id/howtoplaypng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/howtoplay"
        android:layout_marginStart="65dp"/>
    <ImageView
        android:id="@+id/touchpng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/touchscreen"
        android:layout_below="@+id/howtoplaypng"
        android:layout_marginStart="150dp"/>
    <TextView
        android:id="@+id/pressScreenText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/touchpng"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:text="@string/press_the_screen_to_jump"
        android:textStyle="bold"
        android:fontFamily="@font/aldrich"
        android:textColor="#9C2D2D"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/thingsComing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pressScreenText"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:text="@string/you_will_see_things_coming"
        android:textColor="#73DC95"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/takeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/thingsComing"
        android:layout_marginStart="149dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/bad_script"
        android:text="@string/take"
        android:textColor="#ECDADA"
        android:textSize="30sp"
        android:textStyle="bold" />
    <ImageView
        android:id="@+id/hamburgeriii"
        android:layout_width="85dp"
        android:layout_height="58dp"
        android:layout_below="@+id/takeText"
        android:layout_marginStart="60dp"
        android:layout_marginTop="14dp"
        app:srcCompat="@drawable/hamburgerii" />
    <ImageView
        android:id="@+id/pizaa"
        android:layout_width="63dp"
        android:layout_height="69dp"
        android:layout_below="@+id/takeText"
        android:layout_marginStart="240dp"
        app:srcCompat="@drawable/piza" />
    <TextView
        android:id="@+id/dontTake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_take"
        android:layout_below="@id/pizaa"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:textColor="#ECDADA"
        android:textStyle="bold"
        android:fontFamily="@font/bad_script"
        android:layout_marginStart="130dp"/>
    <ImageView
        android:id="@+id/korona"
        android:layout_width="86dp"
        android:layout_height="50dp"
